Fix buttons alignment

--- a/extension/style.css
+++ b/extension/style.css
@@ -33,6 +33,9 @@ button {
     height: 34px;
     letter-spacing: normal;
     line-height: normal;
+/*    margin: 0px 0px 0px 0px;*/
+/*    margin-left: auto;
+    margin-right: auto;*/
     outline: 0 transparent;
     overflow-x: visible;
     overflow-y: visible;
@@ -52,13 +55,13 @@ button {
 }
 
 button#copy {
-    margin-left: 1%;
-    margin-right: 35%;
+/*    margin-left: 1%;
+    margin-right: 35%;*/
 }
 
 button#open {
-    margin-left: 35%;
-    margin-right: 1%;
+/*    margin-left: 35%;
+    margin-right: 1%;*/
 }
 
 div#buttons {
